Updated template and docs to reflect customer naming conventions
refs #17775

--- a/whats_fresh/whats_fresh_api/templates/product.html
+++ b/whats_fresh/whats_fresh_api/templates/product.html
@@ -36,9 +36,9 @@
     {% endif %}
     {% csrf_token %}
     <h3>Basic Info</h3>
-   <p class="field_text">Name*:</p>
+   <p class="field_text">Specific Variety*:</p>
     {{ product_form.name }}
-    <p class="field_text" >Variety:</p>
+    <p class="field_text" >Product Name:</p>
     {{ product_form.variety }}
     <p class="field_text" >Alternate Name:</p>
     {{ product_form.alt_name }}
