--- a/whats_fresh/whats_fresh_api/templates/base.html
+++ b/whats_fresh/whats_fresh_api/templates/base.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
-		{{ load site_title }}
+		{% load site_title %}
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>{{ site_title }} | {{ title }}</title>
+		<title>{% site_title %} | {{ title }}</title>
         <link rel="icon" type="image/png" href="/static/favicon.png">
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,300italic' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Open+Sans:300&effect=3d-float' rel='stylesheet' type='text/css'>
@@ -16,7 +16,7 @@
         <div class="header">
             {% block header %}
             {% endblock header%}
-			<h2><a href='/entry'>{{ site_title }}</a></h2>
+			<h2><a href='/entry'>{% site_title %}</a></h2>
             {% if user.is_authenticated %}
             <a class='logout' href='/logout'>Logout</a>
             {% endif %}
