Rearrange, rename fields in Story entry

--- a/whats_fresh/whats_fresh_api/templates/story.html
+++ b/whats_fresh/whats_fresh_api/templates/story.html
@@ -39,18 +39,18 @@
         <h3>Basic Info</h3>
         <p class="field_text">Name*:</p>
         {{ story_form.name }}
-        <p class="field_text">Facts:</p>
-        {{ story_form.facts }}
-        <p class="field_text">History:</p>
+        <p class="field_text">Overview:</p>
         {{ story_form.history }}
-        <p class="field_text">Buying:</p>
+        <p class="field_text">Management:</p>
+        {{ story_form.season }}
+        <p class="field_text">Fun Facts:</p>
+        {{ story_form.facts }}
+        <p class="field_text">Buying Tips:</p>
         {{ story_form.buying }}
         <p class="field_text">Preparing:</p>
         {{ story_form.preparing }}
-        <p class="field_text">Products:</p>
+        <p class="field_text">Links:</p>
         {{ story_form.products }}
-        <p class="field_text">Season:</p>
-        {{ story_form.season }}
 
     <div class="image_container">
         <h3>Images</h3>
