--- a/whats_fresh/whats_fresh_api/templates/list.html
+++ b/whats_fresh/whats_fresh_api/templates/list.html
@@ -14,6 +14,10 @@
 {% endblock title %}
 
 {% block content %}
+<form class="form" action="">
+    <input type="text" name="search">
+    <input type="submit" value="Search">
+</form><br>
 <div class='message'><h4 class='light accent'>{{ message }}</h4></div>
     <div class='list'>
 {% for item in item_list %}
