--- a/whats_fresh/whats_fresh_api/templates/vendor.html
+++ b/whats_fresh/whats_fresh_api/templates/vendor.html
@@ -54,26 +54,15 @@
 
     <script type="text/javascript" src='http://maps.google.com/maps/api/js?sensor=false&libraries=places'></script>
 
-    <div><input type="text" id="us2-address"/></div><br>
+    <div><input type="text" id="us3-address"/></div>
 
-    <div id="us2" class="map"></div><br>
+    <div id="us3" class="map"></div><br>
+                <p class="field_text">Latitude*:</p>
+                <div><input type="text" id="us3-lat"/></div>
+                <p class="field_text">Longitude*:</p>
+                <div><input type="text" id="us3-lon"/></div>
 
-    <p class="field_text">Latitude*:</p>
-    <div><input type="text" id="us2-lat"/></div>
-    <p class="field_text">Longitude*:</p>
-    <div><input type="text" id="us2-lon"/></div><br>
-
-<!-- Code for Map based location input ends -->
-
-
-<!--         <p class="field_text">Street Address*:</p>
-        {{ vendor_form.street }}
-        <p class="field_text">City*:</p>
-        {{ vendor_form.city }}
-        <p class="field_text">State*:</p>
-        {{ vendor_form.state }}
-        <p class="field_text">Zipcode*:</p>
-        {{ vendor_form.zip }} -->
+    <!-- Code for Map based location inputs ends -->
 
         <p class=" field_text">Location Description:</p>
         {{ vendor_form.location_description }}
@@ -134,16 +123,30 @@
     <script src="http://rawgit.com/Logicify/jquery-locationpicker-plugin/master/dist/locationpicker.jquery.js"></script>
 <script>
 
-    $('#us2').locationpicker({
-        location: {latitude: 44.563781, longitude: -123.27944400000001},
-        radius: false,
-        inputBinding: {
-            latitudeInput: $('#us2-lat'),
-            longitudeInput: $('#us2-lon'),
-            locationNameInput: $('#us2-address')
-        },
-        enableAutocomplete: true
-    });
+// Script for map starts
+
+$('#us3').locationpicker({
+                location: {latitude: 44.563781, longitude: -123.27944400000001},
+                radius: false,
+                inputBinding: {
+                    latitudeInput: $('#us3-lat'),
+                    longitudeInput: $('#us3-lon'),
+                    locationNameInput: $('#us3-address')
+
+                },
+                enableAutocomplete: true,
+                onchanged: function (currentLocation, radius,  isMarkerDropped) {
+                    alert($('#us3').data("locationpicker").addressComponents);
+                    alert("Location changed. New location (" + currentLocation.latitude + ", " + currentLocation.longitude + ")");
+                },
+
+                oninitialized: function() {
+                    alert($('#us3').data("locationpicker").addressComponents);
+                }
+
+            });
+
+// script for map ends
 
     var preparation_options = {{ json_preparations|safe }};
 
