--- a/whats_fresh/whats_fresh_api/templates/vendor.html
+++ b/whats_fresh/whats_fresh_api/templates/vendor.html
@@ -54,17 +54,14 @@
 
     <script type="text/javascript" src='http://maps.google.com/maps/api/js?sensor=false&libraries=places'></script>
 
-    <div id="inputform">
-
-    <div><input type="text" id="us3-address" data-index="1"/></div>
+    <div><input type="text" id="us3-address" onkeypress="removerEnter(event)"/></div>
 
     <div id="us3" class="map"></div><br>
 
                 <p class="field_text">Latitude*:</p>
-                <div><input type="text" id="us3-lat" data-index="2"/></div>
+                <div><input type="text" id="us3-lat" onkeypress="removerEnter(event)"/></div>
                 <p class="field_text">Longitude*:</p>
-                <div><input type="text" id="us3-lon" data-index="3"/></div>
-    </div>
+                <div><input type="text" id="us3-lon" onkeypress="removerEnter(event)"/></div>
 
     <!-- Code for Map based location inputs ends -->
 
@@ -151,20 +148,20 @@ $('#us3').locationpicker({
 
 // Script to avoid form submission when enter is hit.
 
-    $('#inputform').on('keydown', 'input', function (event) {
-        if (event.which == 13) {
-            event.preventDefault();
-            var $this = $(event.target);
-            var index = parseFloat($this.attr('data-index'));
-            $('[data-index="' + (index + 1).toString() + '"]').focus();
-            }
-        });
+    // $('#inputform').on('keydown', 'input', function (event) {
+    //     if (event.which == 13) {
+    //         event.preventDefault();
+    //         var $this = $(event.target);
+    //         var index = parseFloat($this.attr('data-index'));
+    //         $('[data-index="' + (index + 1).toString() + '"]').focus();
+    //         }
+    //     });
 
-    // function removerEnter(e) {
-    //     if (e.which == 13 || e.keyCode == 13) {
-    //         e.preventDefault();
-    //     }
-    // }
+    function removerEnter(e) {
+        if (e.which == 13 || e.keyCode == 13) {
+            e.preventDefault();
+        }
+    }
 
 
     var preparation_options = {{ json_preparations|safe }};
@@ -233,5 +230,3 @@ $('#us3').locationpicker({
     }
 </script>
 {% endblock footer %}
-
-
