--- a/whats_fresh/whats_fresh_api/templates/vendor.html
+++ b/whats_fresh/whats_fresh_api/templates/vendor.html
@@ -54,14 +54,14 @@
 
     <script type="text/javascript" src='http://maps.google.com/maps/api/js?sensor=false&libraries=places'></script>
 
-    <div><input type="text" id="us3-address" onkeypress="removerEnter(event)"/></div>
+    <div><input type="text" id="us3-address" onclick="setLocationField();" onkeypress="removerEnter(event)" name="street" /></div>
 
     <div id="us3" class="map"></div><br>
 
                 <p class="field_text">Latitude*:</p>
-                <div><input type="text" id="us3-lat" onkeypress="removerEnter(event)" enctype="multipart/form-data" value="{{ vendor_form.latitude }}" /></div>
+                <div><input type="text" id="us3-lat" onkeypress="removerEnter(event)" name="latitude" /></div>
                 <p class="field_text">Longitude*:</p>
-                <div><input type="text" id="us3-lon" onkeypress="removerEnter(event)" enctype="multipart/form-data" value="{{ vendor_form.longitude }}" /></div>
+                <div><input type="text" id="us3-lon" onkeypress="removerEnter(event)" name="longitude" /></div>
 
     <!-- Code for Map based location inputs ends -->
 
@@ -138,33 +138,26 @@ $('#us3').locationpicker({
                 enableAutocomplete: true,
                 onchanged: function (currentLocation, radius,  isMarkerDropped) {
                     console.log($('#us3').data("locationpicker").addressComponents);
-                    console.log($('#us3').data("locationpicker").addressComponents.streetName);
-                    console.log($('#us3').data("locationpicker").addressComponents.city);
-                    console.log($('#us3').data("locationpicker").addressComponents.stateOrProvince);
-                    console.log($('#us3').data("locationpicker").addressComponents.postalCode);
+                    var data = ($('#us3').data("locationpicker").addressComponents);
+                    var parts = JSON.stringify(data).split(',');
+                    console.log(parts[5]);   //Street
+                    console.log(parts[3]);   //City
+                    console.log(parts[2]);   //State
+                    console.log(parts[0]);   //ZIP
                     alert("Location changed. New location (" + currentLocation.latitude + ", " + currentLocation.longitude + ")");
                 },
                 oninitialized: function() {
                     console.log($('#us3').data("locationpicker").addressComponents);
-                    console.log($('#us3').data("locationpicker").addressComponents.streetName);
-                    console.log($('#us3').data("locationpicker").addressComponents.city);
-                    console.log($('#us3').data("locationpicker").addressComponents.stateOrProvince);
-                    console.log($('#us3').data("locationpicker").addressComponents.postalCode);
+                    var data = ($('#us3').data("locationpicker").addressComponents);
+                    var parts = JSON.stringify(data).split(',');
+                    console.log(parts[5]);   //Street
+                    console.log(parts[3]);   //City
+                    console.log(parts[2]);   //State
+                    console.log(parts[0]);   //ZIP
 
                 }
 
             });
-
-// Script to avoid form submission when enter is hit.
-
-    // $('#inputform').on('keydown', 'input', function (event) {
-    //     if (event.which == 13) {
-    //         event.preventDefault();
-    //         var $this = $(event.target);
-    //         var index = parseFloat($this.attr('data-index'));
-    //         $('[data-index="' + (index + 1).toString() + '"]').focus();
-    //         }
-    //     });
 
     function removerEnter(e) {
         if (e.which == 13 || e.keyCode == 13) {
@@ -237,5 +230,30 @@ $('#us3').locationpicker({
 
         $('input[name="preparation_ids"]').val(preparation_ids);
     }
+
+
+    function setLocationField()
+    {
+        var street = []
+        var city = []
+        var state = []
+        var zip = []
+
+        $( ".location:visible" ).each( function( index, element ){
+            street.push($('#us3').data("locationpicker").addressComponents.streetName);
+            city.push($('#us3').data("locationpicker").addressComponents.city);
+            state.push($('#us3').data("locationpicker").addressComponents.stateOrProvince);
+            zip.push($('#us3').data("locationpicker").addressComponents.postalCode);
+
+        });
+
+        $('input[name="street"]').val(street);
+        $('input[name="city"]').val(city);
+        $('input[name="state"]').val(state);
+        $('input[name="zip"]').val(zip);
+
+    }
+
+
 </script>
 {% endblock footer %}
