--- a/whats_fresh/whats_fresh_api/templates/vendor.html
+++ b/whats_fresh/whats_fresh_api/templates/vendor.html
@@ -54,7 +54,12 @@
 
     <script type="text/javascript" src='http://maps.google.com/maps/api/js?sensor=false&libraries=places'></script>
 
-    <div><input type="text" id="us3-address" onClick="setLocationField();" onkeypress="removerEnter(event)" required="true" /></div>
+    <div><input type="text" id="us3-address" onkeypress="removerEnter(event)" name="location" required="true" /></div>
+
+    <div><input type="hidden" name="street"></div>
+    <div><input type="hidden" name="city"></div>
+    <div><input type="hidden" name="state"></div>
+    <div><input type="hidden" name="zip"></div>
 
     <div id="us3" class="map"></div><br>
 
@@ -139,9 +144,17 @@ $('#us3').locationpicker({
                 onchanged: function (currentLocation, radius,  isMarkerDropped) {
                     console.log($('#us3').data("locationpicker").addressComponents);
                     alert("Location changed. New location (" + currentLocation.latitude + ", " + currentLocation.longitude + ")");
+                    $('input[name="street"]').val($('#us3').data("locationpicker").addressComponents.streetName);
+                    $('input[name="city"]').val($('#us3').data("locationpicker").addressComponents.city);
+                    $('input[name="state"]').val($('#us3').data("locationpicker").addressComponents.stateOrProvince);
+                    $('input[name="zip"]').val($('#us3').data("locationpicker").addressComponents.postalCode);
                 },
                 oninitialized: function() {
                     console.log($('#us3').data("locationpicker").addressComponents);
+                    $('input[name="street"]').val($('#us3').data("locationpicker").addressComponents.streetName);
+                    $('input[name="city"]').val($('#us3').data("locationpicker").addressComponents.city);
+                    $('input[name="state"]').val($('#us3').data("locationpicker").addressComponents.stateOrProvince);
+                    $('input[name="zip"]').val($('#us3').data("locationpicker").addressComponents.postalCode);
 
                 }
 
@@ -218,17 +231,6 @@ $('#us3').locationpicker({
 
         $('input[name="preparation_ids"]').val(preparation_ids);
     }
-
-
-    function setLocationField()
-    {
-        $('input[name="street"]').val($('#us3').data("locationpicker").addressComponents.streetName);
-        $('input[name="city"]').val($('#us3').data("locationpicker").addressComponents.city);
-        $('input[name="state"]').val($('#us3').data("locationpicker").addressComponents.stateOrProvince);
-        $('input[name="zip"]').val($('#us3').data("locationpicker").addressComponents.postalCode);
-
-    }
-
 
 </script>
 {% endblock footer %}
