Css defined for checkbox. Changes in vendor.html and vendors.py:

--- a/whats_fresh/whats_fresh_api/static/css/style.css
+++ b/whats_fresh/whats_fresh_api/static/css/style.css
@@ -246,4 +246,9 @@ a {
   width: 550px;
   height: 400px; }
 
+label p {
+
+display: inline;
+position: relative; }
+
 /*# sourceMappingURL=style.css.map */
