--- a/whats_fresh/whats_fresh_api/templates/vendor.html
+++ b/whats_fresh/whats_fresh_api/templates/vendor.html
@@ -53,7 +53,9 @@
 
         <script type="text/javascript" src='http://maps.google.com/maps/api/js?sensor=false&libraries=places'></script>
 
-        <div><input type="text" id="us3-address" onkeypress="removerEnter(event)" name="location" required="true" /></div>
+        <div>
+        <input type="text" id="us3-address" onkeypress="removerEnter(event)" name="location" required="true" disabled="disabled" {% if location %} value="{{ location }}" {% endif %} />
+        </div>
 
         <div><input type="hidden" name="street" required="true" ></div>
         <div><input type="hidden" name="city" required="true" ></div>
@@ -61,19 +63,20 @@
         <div><input type="hidden" name="zip" required="true" ></div>
 
         <label>
-            <input type="checkbox" class="checkbox">
+            <input type="checkbox" id="loc" checked="checked" />
             <p class="field_text">Lock Location</p>
         </label>
+
 
         <br><br>
         <div id="us3" class="map"></div><br>     <!-- Provides the map -->
 
 
         <p class="field_text">Latitude*:</p>
-        <div><input type="text" id="us3-lat" onkeypress="removerEnter(event)" name="latitude" required="true" /></div>
+        <div><input type="text" id="us3-lat" onkeypress="removerEnter(event)" name="latitude" required="true" {% if latitude %} value="{{ latitude }}" {% endif %}/></div>
 
         <p class="field_text">Longitude*:</p>
-        <div><input type="text" id="us3-lon" onkeypress="removerEnter(event)" name="longitude" required="true" /></div>
+        <div><input type="text" id="us3-lon" onkeypress="removerEnter(event)" name="longitude" required="true" {% if longitude %} value="{{ longitude }}" {% endif %}/></div>
 
         <p class=" field_text">Location Description:</p>
         {{ vendor_form.location_description }}
@@ -150,7 +153,7 @@ $('#us3').locationpicker({
         alert("Location changed. New location (" + currentLocation.latitude + ", " + currentLocation.longitude + ")");
         console.log($('#us3').data("locationpicker").addressComponents);
 
-         $('input[type="checkbox"]').click(function(){
+         $('#loc').click(function(){
 
             if($(this).prop("checked") == true){
 
@@ -161,19 +164,19 @@ $('#us3').locationpicker({
 
             else if($(this).prop("checked") == false){
 
-            alert("Location field unlocked!");
-            $("#us3-address").prop('disabled',false);
+                alert("Location field unlocked!");
+                $("#us3-address").prop('disabled',false);
 
             }
 
     });
 
 
-        $('input[name="location"]').val($('#us3').data("locationpicker").locationName);
-        $('input[name="street"]').val($('#us3').data("locationpicker").addressComponents.streetName);
-        $('input[name="city"]').val($('#us3').data("locationpicker").addressComponents.city);
-        $('input[name="state"]').val($('#us3').data("locationpicker").addressComponents.stateOrProvince);
-        $('input[name="zip"]').val($('#us3').data("locationpicker").addressComponents.postalCode);
+       $('input[name="location"]').val($('#us3').data("locationpicker").locationName);
+       $('input[name="street"]').val($('#us3').data("locationpicker").addressComponents.addressLine1);
+       $('input[name="city"]').val($('#us3').data("locationpicker").addressComponents.city);
+       $('input[name="state"]').val($('#us3').data("locationpicker").addressComponents.stateOrProvince);
+       $('input[name="zip"]').val($('#us3').data("locationpicker").addressComponents.postalCode);
 
     },
 
@@ -181,12 +184,11 @@ $('#us3').locationpicker({
 
     console.log($('#us3').data("locationpicker").addressComponents);
 
-     $('input[type="checkbox"]').click(function(){
+     $('#loc').click(function(){
 
         if($(this).prop("checked") == true){
 
            alert("Location field locked!");
-
            $("#us3-address").prop('disabled',true);
 
         }
@@ -194,21 +196,17 @@ $('#us3').locationpicker({
         else if($(this).prop("checked") == false){
 
             alert("Location field unlocked!");
-
-           $("#us3-address").prop('disabled',false);
+            $("#us3-address").prop('disabled',false);
 
         }
 
     });
-        // $('input[name="latitude"]').val($('#us3').data("locationpicker").latitude);
-        // $('input[name="longitude"]').val($('#us3').data("locationpicker").longitude);
-        // $('input[name="location"]').val($('#us3').data("locationpicker").locationNameInput);
 
-
-        $('input[name="street"]').val($('#us3').data("locationpicker").addressComponents.streetName);
-        $('input[name="city"]').val($('#us3').data("locationpicker").addressComponents.city);
-        $('input[name="state"]').val($('#us3').data("locationpicker").addressComponents.stateOrProvince);
-        $('input[name="zip"]').val($('#us3').data("locationpicker").addressComponents.postalCode);
+       $('input[name="location"]').val($('#us3').data("locationpicker").locationName);
+       $('input[name="street"]').val($('#us3').data("locationpicker").addressComponents.addressLine1);
+       $('input[name="city"]').val($('#us3').data("locationpicker").addressComponents.city);
+       $('input[name="state"]').val($('#us3').data("locationpicker").addressComponents.stateOrProvince);
+       $('input[name="zip"]').val($('#us3').data("locationpicker").addressComponents.postalCode);
 
     }
 
